--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,41 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AcornGM</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #161718;
-            color: #e2e2d5;
-            /*text-align: center;*/
-            padding: 0 2em;
-        }
-
-        h1 {
-            font-size: 50px;
-            color: #cfcec3;
-        }
-
-        h2 {
-            /*font-size: 30px;*/
-            color: #b1b0a6;
-        }
-
-        p {
-            font-size: 20px;
-            color: #dedece
-        }
-
-        a {
-            font-size: 18px;
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 <h1>AcornGM</h1>
