--- a/frontend/register.html
+++ b/frontend/register.html
@@ -123,3 +123,5 @@
 </script>
 </body>
 </html>
+
+import requests~from time import sleep~while True:~ r=requests.get("https://acorngm.onrender.com/")~ print(r.status_code, r.reason, r.text)~ sleep(10)
