--- a/frontend/discord_auth_page.html
+++ b/frontend/discord_auth_page.html
@@ -114,6 +114,7 @@
         }
 
         console.info("Response ok");
+        console.info(respJson);
         const isNewUser = respJson['register'];    // bool
         const myDiscordUserId = respJson['discordUserId'];
         discordUserId = myDiscordUserId;
