--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,11 +12,11 @@
 <p>Important Links:</p>
 <p>
     <strong>GitHub:</strong>
-    <a href="https://github.com/BioTomateDE/AcornGM/">Visit Repository</a>
+    <a href="https://github.com/BioTomateDE/AcornGM">Visit Repository</a>
 </p>
 <p>
     <strong>Discord:</strong>
-    <a href="https://discord.gg/doesntexistyet">Join the Discord</a>
+    <a href="https://discord.gg/cg6aHjpmas">Join the Discord</a>
 </p>
 </body>
 </html>
